# dagger-agentic-workflows

./: .coverage  Makefile  README.md  ci-smell-graph-plan.md  coverage.xml  docker-compose.yml  feature-development-guide.md  knowledge.md  nx.json  package-lock.json  package.json  pyproject.toml  root-coverage.xml
agents/builder/: dagger.json  knowledge.md  pyproject.toml
agents/builder/src/builder/: __init__.py  main.py  template.py
agents/builder/src/builder/core/: builder_agent.py
agents/builder/src/builder/models/: config.py
agents/builder/tests/: __init__.py
agents/codebuff/: .coverage  .infisical.json  README.md  coverage.xml  dagger.json  knowledge.md  pyproject.toml
agents/codebuff/demo/: codebuff-feature-demo.yaml  feature-development-example.sh
agents/codebuff/src/: README.md
agents/codebuff/src/codebuff/: __init__.py  constants.py  main.py  utils.py
agents/codebuff/src/codebuff/context_pruner/: agent.py
agents/codebuff/src/codebuff/file_explorer/: agent.py
agents/codebuff/src/codebuff/file_picker/: agent.py
agents/codebuff/src/codebuff/implementation/: agent.py
agents/codebuff/src/codebuff/orchestrator/: agent.py  models.py
agents/codebuff/src/codebuff/reviewer/: agent.py
agents/codebuff/src/codebuff/thinker/: agent.py
agents/codebuff/tests/: test_codebuff_agents.py
agents/coverage_agent/: README.md  dagger.json  pyproject.toml
agents/coverage_agent/demo/: agencyservices.yaml  config.yaml
agents/coverage_agent/plugins/reporter/: pyproject.toml
agents/coverage_agent/plugins/reporter/pytest/: dagger.json  pyproject.toml
agents/coverage_agent/src/coverage_agent/: __init__.py  main.py  template.py  utils.py
agents/coverage_agent/src/coverage_agent/core/: builder_agent.py  code_review_agent.py  code_review_agents.py  config.schema.json  configuration_loader.py  container_builder.py  coverage_review_agent.py  coverai_agent.py  llm_service.py  open_router_service.py  openai_service.py  pull_reqest_agent.py  pull_request_agent.py  test_file_handler.py  workspace.py
agents/coverage_agent/src/coverage_agent/models/: code_module.py  coverage_report.py  coverage_review.py  test_review.py
agents/documenter/: dagger.json  pyproject.toml
agents/documenter/src/documenter/: __init__.py  main.py  template.py  utils.py
agents/documenter/src/documenter/core/: documenter_agent.py
agents/documenter/src/documenter/models/: llm_credentials.py
agents/pull_request/: dagger.json  knowledge.md  pyproject.toml
agents/pull_request/src/pull_request_agent/: __init__.py  main.py  template.py
agents/pull_request/src/pull_request_agent/core/: pull_request_agent.py
agents/pull_request/tests/: __init__.py
scripts/: run_tests.py  (+1 more)
services/neo/: .coverage  dagger.json  knowledge.md  neo-coverage.xml  pyproject.toml
services/neo/demo/: agencyservices.yaml
services/neo/src/neo/: __init__.py  main.py
services/neo/tests/: __init__.py  conftest.py  test_neo_service.py  test_neo_service_comprehensive.py
services/query/: .coverage  coverage.xml  dagger.json  knowledge.md  pyproject.toml
services/query/src/query/: __init__.py  main.py
services/query/src/query/utils/: code_parser.py  embeddings.py
services/query/tests/: test_query_service.py
shared/agent-utils/: .coverage  dagger.json  knowledge.md  pyproject.toml
shared/agent-utils/src/agent_utils/: __init__.py  main.py
shared/agent-utils/tests/: test_agent_utils.py
shared/dagger-agents-config/: pyproject.toml
shared/dagger-agents-config/src/ais_dagger_agents_config/: __init__.py  models.py
workflows/clean/: dagger.json  pyproject.toml  setup_supabase.sql
workflows/clean/demo/: agencyservices.yaml
workflows/clean/src/clean/: __init__.py  main.py
workflows/clean/src/clean/core/: clean_names_workflow.py  index_codebase.py  meaningful_names_agent.py  rag_naming_agent.py
workflows/clean/src/clean/models/: config.py  llm_credentials.py
workflows/clean/src/clean/utils/: code_parser.py  embeddings.py  llm.py
workflows/cover/: README.md  dagger.json  knowledge.md  pyproject.toml
workflows/cover/demo/: agencyservices.yaml  config.yaml
workflows/cover/plugins/reporter/: dagger.json  pyproject.toml
workflows/cover/plugins/reporter/jest/: .gitattributes  .gitignore  pyproject.toml
workflows/cover/plugins/reporter/pytest/: pyproject.toml
workflows/cover/src/coverage/: __init__.py  main.py  template.py  utils.py
workflows/cover/src/coverage/core/: configuration_loader.py  coverage_review_agent.py  coverai_agent.py  llm_service.py  test_file_handler.py
workflows/cover/src/coverage/models/: code_module.py  config.py
workflows/cover/src/coverage/services/: neo4j_service.py
workflows/coverage/plugins/reporter/jest/: dagger.json  pyproject.toml
workflows/document/: dagger.json  pyproject.toml
workflows/document/src/document/: __init__.py  main.py  template.py  utils.py
workflows/document/src/document/core/: documenter_agent.py
workflows/document/src/document/models/: llm_credentials.py
workflows/gen_graph/agents/user_intent/: dagger.json  pyproject.toml
workflows/gen_graph/agents/user_intent/demo/: agencyservices.yaml
workflows/graph/: .coverage  dagger.json  knowledge.md  pyproject.toml
workflows/graph/demo/: agencyservices.yaml
workflows/graph/src/graph/: __init__.py  main.py  utils.py
workflows/graph/src/graph/models/: code_file.py
workflows/graph/src/graph/operations/: import_analyzer.py  relationship_extractor.py
workflows/graph/tests/: __init__.py  test_graph_basic.py  test_graph_basic_working.py  test_graph_service.py
workflows/index/: dagger.json  knowledge.md  neo4j_schema  pyproject.toml
workflows/index/demo/: agencyservices.yaml
workflows/index/docker/neo4j/: Dockerfile
workflows/index/src/index/: __init__.py  main.py  models.py  template.py
workflows/smell/: .coverage  coverage.xml  dagger.json  knowledge.md  pyproject.toml
workflows/smell/demo/: agencyservices.yaml
workflows/smell/src/smell/: __init__.py  main.py
workflows/smell/tests/: __init__.py  test_new_detectors.py  test_smell_basic.py  test_smell_detectors.py
(+71 files in other folders)
