[project]
name = "builder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-agents-config @ git+ssh://git@github.com/yourusername/dagger-agents.git#subdirectory=shared/dagger-agents-config",
    "pydantic-ai>=0.2.10",
    "pydantic[email]>=2.11.5",
    "pyyaml>=6.0.2",
    "simple-chalk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "dagger-io",
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }  # Local SDK
