[project]
name = "codebuff"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dagger-io",
    "ais-dagger-agents-config>=0.1.0,<0.2.0", 
    "pydantic-ai>=0.2.10",
    "pydantic[email]>=2.11.5",
    "pyyaml>=6.0.2",
    "simple-chalk>=0.1.0",
]


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
]
markers = [
    "agent: marks tests for agent functionality",
    "orchestration: marks tests for orchestration logic",
    "llm: marks tests that require LLM API access",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
