[project]
name = "coverage-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-io",
    "openai>=1.76.2",
    "pydantic-ai>=0.1.8",
    "simple-chalk>=0.1.0",
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
