[project]
name = "pull-request-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-io",
    "ais-dagger-agents-config>=0.1.0,<0.2.0",
    "pydantic-ai>=0.2.10",
    "pydantic[email]>=2.11.5",
    "pyyaml>=6.0.2",
    "simple-chalk>=0.1.0"
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
]
markers = [
    "pr: marks tests for pull request functionality",
    "llm: marks tests that require LLM API access",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
