[project]
name = "query"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dagger-io",
    "openai>=1.107.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "supabase>=2.18.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
