[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagger-agents-config"
version = "0.1.0"
description = "Shared configuration models for Dagger Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagger_agents_config"]