[project]
name = "clean"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ais-dagger-agents-config>=0.1.0,<0.2.0", 
    "email-validator>=2.2.0",
    "pydantic-ai>=0.2.4",
    "pyyaml>=6.0.2",
    "simple-chalk>=0.1.0",
    "supabase>=2.15.1",
    "dagger-io",  
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }  # Path from clean to root SDK
