[project]
name = "reporter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-io",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
]
markers = [
    "reporter: marks tests for reporter functionality",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[project.entry-points."dagger.mod"]
main_object = 'reporter:Reporter'
