[project]
name = "pytest-reporter-plugin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dagger-io",
    "jsonschema>=4.23.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
