[project]
name = "jest-reporter-plugin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-io",
    "beautifulsoup4>=4.13.4",
    "pydantic>=2.11.4",
]


[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagger-agents-config = { workspace = true }
dagger-io = { path = "sdk", editable = true }
