[project]
name = "pytest-reporter-plugin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagger-io",
    "beautifulsoup4>=4.13.4",
    "jsonschema>=4.23.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--tb=short",
]
markers = [
    "pytest_plugin: marks tests for Pytest reporter plugin",
    "plugin: marks tests for reporter plugin functionality",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
